# ragly

./: README.md  pyproject.toml  setup_ragly.py
.github/workflows/: ragly-update.yml
ingest/: code_chunks.json  code_search.py  custom_extractor.py  digest.json  gitingest_runner.py  orchestrator.py  rag_generator.py  summarize_embed.py
ragly.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
webui/: app_enhanced.py
